--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,14 @@
         "blade-ui-kit/blade-icons": "^1.7",
         "cmixin/season": "^1.0",
         "code16/sharp": "^8.5",
+        "http-interop/http-factory-guzzle": "^1.2",
         "laravel-notification-channels/telegram": "^5.0",
         "laravel/framework": "^11.9",
         "laravel/octane": "^2.5",
+        "laravel/scout": "^10.11",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
+        "meilisearch/meilisearch-php": "^1.11",
         "predis/predis": "^2.2",
         "ryangjchandler/blade-tabler-icons": "^2.3"
     },
