--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,16 +4,14 @@ nodaemon=true
 [program:octane]
 command=php /app/artisan octane:frankenphp
 
-[program:laravel-worker]
+[program:laravel_horizon]
 process_name=%(program_name)s_%(process_num)02d
-command=php /app/artisan queue:work --sleep=3 --tries=3 --max-time=3600
+command=php /app/artisan horizon
 autostart=true
 autorestart=true
-stopasgroup=true
-killasgroup=true
-user=root
-numprocs=2
 redirect_stderr=true
+user=root
+numprocs=1
 stdout_logfile=/app/storage/logs/worker.log
 stopwaitsecs=3600
 
