--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
         "axios": "^1.8.2",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.47",
-        "tailwindcss": "^3.4.13",
+        "tailwindcss": "^4.1.7",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "@tailwindcss/vite": "^4.1.7"
     }
 }
